# datos-itam

./: .gitignore  Dockerfile  railway.toml
api/: .env.example  .env.production.example  Dockerfile  pyproject.toml
api/app/: auth.py  config.py  database.py  dependencies.py  main.py  rate_limit.py
api/docs/: enigh-inventory.md  enigh-schema-plan-v2.md  enigh-schema-plan.md  er-diagram.md
api/migrations/: 001_normalize.sql  002_users.sql  003_indexes_and_extensions.sql  004_materialized_views.sql  005_multischema_cdmx.sql  005_rollback_multischema_cdmx.sql  006_enigh_schema.sql  007_enigh_schema.sql  007_rollback_enigh_schema.sql  008_users_is_admin.sql  009_consar_schema.sql  010_demo_curso_bd.sql  011_demo_curso_bd_v2.sql  012_demo_equipo_sueldo_plano.sql  013_consar_comisiones.sql  014_consar_flujo_recurso.sql  015_consar_traspaso.sql  016_consar_pea_cotizantes.sql  017_consar_cat_siefore.sql  018_consar_afore_alias.sql  019_consar_afore_siefore_alias.sql  020_consar_activo_neto.sql  021_consar_rendimiento.sql  022_consar_medida_sensibilidad.sql  023_consar_cuenta_administrada.sql  024_consar_precio_bolsa.sql  025_consar_precio_gestion.sql
api/scripts/: create_admin.py  explore_enigh.py  generate_enigh_migration_007.py  ingest_consar_01_precio_bolsa.py  ingest_consar_03_medida_sensibilidad.py  ingest_consar_05_cuenta_administrada.py  ingest_consar_07_activo_neto.py  ingest_consar_10_rendimiento.py  ingest_consar_11_precio_gestion.py  ingest_consar_comisiones.py  ingest_consar_flujo_recurso.py  ingest_consar_pea_cotizantes.py  ingest_consar_recursos.py  neon-psql  (+7 more)
(+126 files in other folders)
