[project]
name = "api"
version = "0.1.0"
description = "API publica datos-itam - Remuneraciones CDMX"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.7",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.28"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
